Fix integral alignment

--- a/src/components/Integrals/Integrals.css
+++ b/src/components/Integrals/Integrals.css
@@ -10,7 +10,7 @@
 .integrals .integral {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 
     flex: 1 1 300px;
 }
